--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,16 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_light">
+
+
     <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/text_view_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000" />
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/text_view_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:background="#AFF"
+            />
+
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
+    <ListView
+        android:id="@+id/list_view_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000"/>
 
 </RelativeLayout>
