--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,13 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/grey_light">
 
-
-    <androidx.core.widget.NestedScrollView
-    android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
         <TextView
             android:id="@+id/text_view_result"
             android:layout_width="wrap_content"
@@ -19,15 +12,28 @@
             android:textColor="#000"
             android:background="#AFF"
             />
+    <Button
+        android:id="@+id/addBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_below="@+id/editTxt"
+        android:text="ADD"/>
+    <EditText
+        android:id="@+id/editTxt"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/addBtn"
+        android:hint="new element to add"
+        android:textColor="#000"/>
 
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
 
     <ListView
         android:id="@+id/list_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000"/>
-
+        android:textColor="#000"
+        />
 </RelativeLayout>
+
