Customizable text to speech
- remove Textview 
+ adding editable text component

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -15,7 +15,7 @@
         android:title="Take a picture"/>
     <item android:id="@+id/getVoice"
         android:icon="@drawable/ic_voice"
-        android:title="Use your voice"/>
+        android:title="Text to Speech"/>
 </group>
 
 </menu>
