--- a/app/src/main/res/layout/fragment_voice.xml
+++ b/app/src/main/res/layout/fragment_voice.xml
@@ -10,15 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Use Mic"/>
+        android:text="Speech Text"/>
 
-    <TextView
+    <EditText
         android:id="@+id/voice_result"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:textColor="#000"
-        android:text="This is an example"
-        />
+        android:text="edit text here"
+        android:inputType="text"/>
 </RelativeLayout>
