--- a/app/src/main/res/layout/fragment_item_infos.xml
+++ b/app/src/main/res/layout/fragment_item_infos.xml
@@ -7,10 +7,11 @@
 
 
     <TextView
-        android:id="@+id/list_view_result"
+        android:id="@+id/item_infos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFF"
+        android:text="List element"
         android:textAlignment="center"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
