--- a/app/src/main/res/layout/fragment_item_infos.xml
+++ b/app/src/main/res/layout/fragment_item_infos.xml
@@ -5,15 +5,14 @@
     android:layout_height="match_parent"
     android:background="#FFFF">
 
-
     <TextView
         android:id="@+id/item_infos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:background="#FFFF"
         android:text="List element"
         android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textColor="#000" />
+        android:textColor="#000"
+        android:textSize="36sp" />
 </RelativeLayout>
